# CoolKidsBadge-2024

./: .gitmodules  README.md
fw/esp32/: .gitignore  CMakeLists.txt  build.sh
fw/esp32/main/: CMakeLists.txt  board.c  board.h  clean.sh  config.h  coolkids.c  coolkids.h  dnsd.c  dnsd.h  httpd.c  httpd.h  idf_component.yml  keep_alive.h  led.c  led.h  main.c  main.h  nvs_db.c  nvs_db.h  sntp.c  sntp.h  wifi.c  wifi.h
fw/esp32/main/certs/: README.md  prvtkey.pem  servercert.pem
fw/esp32/main/compressed/: css.css  gpio.html  i2c.html  index.html  js.js  landing.html  led.html  wifi.html
fw/esp32/main/handlers/: handlers.h
fw/esp32/main/handlers/get/: css.c  gpio.c  i2c.c  index.c  js.c  landing.c  led.c  scan.c  uuid.c  wifi.c
fw/esp32/main/handlers/post/: gpioconf.c  ledconf.c  ota.c  wificonf.c
fw/esp32/main/handlers/ws/: wss.c
fw/scripts/createCerts/: README.md  ssl_cert_gen.conf  ssl_cert_gen.sh
fw/scripts/wifiPassword/: README.md  getWifiPassword.sh
hw/: CoolKidsBadge_PCB.stl
hw/kicad_schematics/: CIRCLE.kicad_sch  CoolKidsBadge.kicad_pro  CoolKidsBadge.kicad_sch  POWER_ISOLATOR.kicad_sch  sym-lib-table  ~CoolKidsBadge.kicad_sch.lck
